# pytest-plugins

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
src/pytest_plugins/: plugin.py  smtp.py
tests/: test_ini.py  test_time.py
