[project]
name = "pytest-plugins"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yang Cao", email = "yang.cao@liferay.com"},
]
dependencies = [
    "pytest>=8.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
plugin = "pytest_plugins.plugin"

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
      \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
] }

test = "pytest"